--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,17 @@
 
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://localhost:8000/">
+<link rel="canonical" href="https://srishti-git1110.github.io/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.b609c58d5c11bb90b1a54e04005d74ad1ddf22165eb79f5533967e57df9c3b50.css" integrity="sha256-tgnFjVwRu5CxpU4EAF10rR3fIhZet59VM5Z&#43;V9&#43;cO1A=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://localhost:8000/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:8000/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:8000/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://localhost:8000/apple-touch-icon.png">
-<link rel="mask-icon" href="http://localhost:8000/safari-pinned-tab.svg">
+<link rel="icon" href="https://srishti-git1110.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://srishti-git1110.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://srishti-git1110.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://srishti-git1110.github.io/apple-touch-icon.png">
+<link rel="mask-icon" href="https://srishti-git1110.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="http://localhost:8000/index.xml">
-<link rel="alternate" hreflang="en" href="http://localhost:8000/">
+<link rel="alternate" type="application/rss+xml" href="https://srishti-git1110.github.io/index.xml">
+<link rel="alternate" hreflang="en" href="https://srishti-git1110.github.io/">
 <noscript>
     <style>
         #theme-toggle,
@@ -60,7 +60,7 @@
 </noscript><meta property="og:title" content="Srishti Gureja" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://localhost:8000/" />
+<meta property="og:url" content="https://srishti-git1110.github.io/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Srishti Gureja"/>
@@ -71,9 +71,9 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Srishti Gureja",
-  "url": "http://localhost:8000/",
+  "url": "https://srishti-git1110.github.io/",
   "description": "",
-  "thumbnailUrl": "http://localhost:8000/favicon.ico",
+  "thumbnailUrl": "https://srishti-git1110.github.io/favicon.ico",
   "sameAs": [
       
   ]
@@ -96,7 +96,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:8000/" accesskey="h" title="Srishti Gureja (Alt + H)">Srishti Gureja</a>
+            <a href="https://srishti-git1110.github.io/" accesskey="h" title="Srishti Gureja (Alt + H)">Srishti Gureja</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -128,7 +128,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2024 <a href="http://localhost:8000/">Srishti Gureja</a></span>
+    <span>&copy; 2024 <a href="https://srishti-git1110.github.io/">Srishti Gureja</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
